<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu"
            android:title="@string/menu_home" />
    </group>
    <group>
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/star"
            android:title="@string/menu_fav" />
    </group>
    <group>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/video"
            android:title="@string/menu_videos" />
    </group>
    <group>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="الاعدادات" />
    </group>

    <group>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
    </group>
</menu>
