<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hisnElMuslem.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

  <!--      <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />-->
    </fragment>
   <!-- <fragment
        android:id="@+id/nav_home_second"
        android:name="com.hisnElMuslem.myapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.hisnElMuslem.myapplication.ui.favourite.FavouriteFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.hisnElMuslem.myapplication.ui.Youtube.YoutubePageFragment"
        android:label="@string/menu_videos"
        tools:layout="@layout/youtube_fragment_layout" />

  <fragment
      android:id="@+id/nav_setting"
      android:name="com.hisnElMuslem.myapplication.ui.Setting.SettingFragmnet"
      android:label="@string/setting"
      tools:layout="@layout/setting_fragment_layout" />


  <fragment
      android:id="@+id/nav_slideshow"
      android:name="com.hisnElMuslem.myapplication.ui.aboutUs.AboutUsFragment"
      android:label="@string/menu_about"
      tools:layout="@layout/fragment_aboutus" />



</navigation>